--- a/css/loginform.css
+++ b/css/loginform.css
@@ -4,8 +4,17 @@
 body {
     height: 100vh;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+}
+
+p {
+	font-size: 1.5rem;
+	font-weight: bold;
+	position: relative;
+	text-align: center;
+	bottom: 1rem;
 }
 
 /* FORM CONTAINER */
