--- a/css/blog.css
+++ b/css/blog.css
@@ -33,6 +33,26 @@
     gap: 1rem;
 }
 
+.blog-item {
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
+}
+
+.item-date {
+    font-size: 0.8rem;
+    text-align: right;
+}
+
+.item-title {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+hr {
+    width: 98%;
+    border: 0.15rem solid #ffab2c;
+}
 /* BUTTON */
 button {
 	padding: 0.5rem 1.25rem;
