--- a/css/blog.css
+++ b/css/blog.css
@@ -47,6 +47,11 @@
 .item-title {
     font-weight: bold;
     font-size: 1.2rem;
+    line-height: 1.3;
+}
+
+.item-text {
+    line-height: 1.3;
 }
 
 hr {
